tests/language_tests/pass/0054_nothing_condition_is_falsy.ee
fn main() {
    if (nothing) {
        print(1);
    } else {
        print(2);
    }
}
