tests/language_tests/fail/0030_unknown_variable_in_else_if_condition.ee
fn main() {
    if (false) {
        print(1);
    } else if (missing) {
        print(2);
    }
}
